# vita-gen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cv_generator/: content.py  main.py  models.py  renderer.py  renderer_backup.py
src/vita_gen/: __init__.py  cover_letter_renderer.py  main.py  models.py
